gcc/testsuite/algol68/compile/error-widening-9.a68
# { dg-options "-fstropping=upper" }  #

BEGIN
   INT d := 0;
   LONG LONG REAL x;
   2
     + (d > 0 | x | # { dg-error "" }  #
          10
       )
END
